--- a/samples/photo_album/views/photos/index.ejs
+++ b/samples/photo_album/views/photos/index.ejs
@@ -55,7 +55,12 @@
                 { crop : "fit", height : 150, width : 150 },
                 { crop : "thumb", gravity : "face", height : 150, width : 150 },
                 { format : "png", angle : 20, transformation : { 
-                  crop : "fill", gravity : "north", effect : "sepia", height : 150, width : 150 } }
+                  crop : "fill", gravity : "north", effect : "sepia", height : 150, width : 150 } },
+                  { crop : "fit", height : 150, width : 150,
+                  effect: "saturation:50"},
+                {transformation: [
+                  { crop : "fit", height : 150, width : 150 },
+                  {overlay: {url: "https://res.cloudinary.com/tangoecho/image/upload/v1616631124/samples/cloudinary-icon.png"}, width: "0.75", flags: "relative", opacity: 60}]}
               ] %>
             <% transformations.forEach(function(image_params) {%>
 
@@ -87,4 +92,3 @@
   </ul>
 <% } %>
 </div>
-
