--- a/samples/photo_album/views/photos/index.ejs
+++ b/samples/photo_album/views/photos/index.ejs
@@ -2,9 +2,7 @@
 
 
 <div id="posterframe">
-  <!-- This will render the fetched Facebook profile picture using Cloudinary according to the
-  requested transformations -->
-  <%-cloudinary.image('officialchucknorrispage',{type:'facebook',format:'png',transformation:[{height:95,width:95,crop:'thumb',gravity:'face',effect:'sepia',radius:20},{angle:10}]})%>
+  <%-cloudinary.image("wjqy9rux5ikyof77kujf.png", {gravity: "face", height: 105, radius: 20, width: 105, crop: "thumb"})%>
 </div>
 
 <h1>Welcome!</h1>
@@ -48,7 +46,6 @@
             <input type="hidden" name="public_id" value="<%= id%>" /> 
 
             <button class="delete-image" onclick="document.querySelector('.delete-image-form').submit(); ">Delete</button> 
-
           </form> 
           
 
