--- a/samples/photo_album/public/css/photo_album.css
+++ b/samples/photo_album/public/css/photo_album.css
@@ -2,7 +2,7 @@ body {
     color: #333;
     font-family: Helvetica, Arial, sans-serif;
     margin: 10px;
-    width: 960px;
+    max-width: 960px;
 }
 #posterframe {
     position: absolute;
@@ -12,14 +12,15 @@ body {
 h1 {
     color: #0e2953;
     font-size: 18px;
+    margin-top: 4rem;
 }
 h2 {
     color: #666;
     font-size: 16px;
 }
 p {
-    font-size: 14px;
-    line-height: 18px;
+    font-size: 1rem;
+    line-height: 1.4;
 }
 #logo {
     height: 51px;
@@ -32,14 +33,9 @@ a {
     margin: 20px 0;
 }
 .upload_link {
-    background-color: #e0e0e0;
-    border: 1px solid #aaa;
     color: #000;
-    font-size: 18px;
-    font-weight: bold;
     margin: 10px 0 20px 0;
     margin: 5px;
-    padding: 5px 10px;
     text-align: center;
     text-decoration: none;
     width: 250px;
@@ -56,7 +52,6 @@ a {
     max-width: 200px;
 }
 .toggle_info {
-    color: #e62401;
     display: block;
     font-weight: bold;
     margin-top: 10px;
@@ -187,12 +182,62 @@ form .error {
 
 /***** my additions ******/
 /* cloudinary dark blue => #0c163b */
+a:hover {
+    color: #095296;
+}
+
+.upload_link {
+    --lightGreen: #fafffd;
+    --darkGreen: #018454;
+
+    font-size: 1rem;
+    font-weight: 400;
+    outline: 0;
+    padding: 12px 16px;
+    border: 1.25px solid var(--darkGreen);
+    background-color: var(--lightGreen);
+    transition: all 0.3s ease;
+}
+
+.upload_link:hover {
+    --darkGreen: #005b3a;
+    color: #fff;
+    background-color: #018454;
+}
+
+.upload_link:active {
+    transform: scale(0.97);
+}
+
+.delete-image-form {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
 .delete-image {
+    --lightRed: hsl(354, 94%, 99%);
+    --darkRed: hsl(354, 94%, 44%);
+
     display: block;
     font-size: inherit;
     margin: 1rem 0;
-    padding: 8px 12px;
+    padding: 12px 16px;
     cursor: pointer;
+    border: 1.25px solid var(--darkRed);
+    border-radius: 3px;
+    background-color: var(--lightRed);
+    transition: all 0.3s ease;
+}
+
+.delete-image:hover {
+    --darkRed: hsl(354, 94%, 44%);
+    color: #fff;
+    background-color: var(--darkRed);
+}
+
+.delete-image:active {
+    transform: scale(0.97);
 }
 
 .thumbnails {
