Apply display of inline-block to upload links

--- a/samples/photo_album/public/css/photo_album.css
+++ b/samples/photo_album/public/css/photo_album.css
@@ -197,6 +197,7 @@ a:hover {
     border: 1.25px solid var(--darkGreen);
     background-color: var(--lightGreen);
     transition: all 0.3s ease;
+    display: inline-block;
 }
 
 .upload_link:hover {
